[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
dotenv = "0.15.0"

ethers = { version = "1.0.0", features = ["abigen"] }
eyre = "0.6.8"
reqwest = "0.11.12"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
slack-hook = "0.8.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
